--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Jogo da Cobrinha</title> <!-- Titulo do Site -->
 </head>
 <body>
+    <h1>SNAKE GAME</h1>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
