Jogo de tiro com inimigos ( 51:32 )
https://www.youtube.com/watch?v=eI9idPTT0c4

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/style/style.css"> <!-- link do css -->
-    <script defer src="/style/script.js"></script> <!-- link do java script -->
+    <canvas></canvas>
 
-    <title>Jogo da Cobrinha</title> <!-- Titulo do Site -->
+    <link rel="stylesheet" href="/style/style.css"> <!-- link do css -->
+    <script src="./style/index.js"></script> <!-- link do java script -->
+
+    <title>Mario Jump</title> <!-- Titulo do Site -->
 </head>
 <body>
-    <h1>SNAKE GAME</h1>
-    <canvas id="snake" width="512" height="512"></canvas>
+
+    <div class="game-board">
+
+    </div>
+
 </body>
 </html>
