--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/style/style.css"> <!-- link do css -->
     <script src="./style/index.js"></script> <!-- link do java script -->
 
-    <title>Mario Jump</title> <!-- Titulo do Site -->
+    <title>tiro.io</title> <!-- Titulo do Site -->
 </head>
 <body>
 
