--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <canvas></canvas>
 
     <link rel="stylesheet" href="/style/style.css"> <!-- link do css -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><!-- libraries gsap-->
     <script src="./style/index.js"></script> <!-- link do java script -->
 
     <title>tiro.io</title> <!-- Titulo do Site -->
