--- a/index.html
+++ b/index.html
@@ -4,20 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            margin: 0;
+            background: black;
+        }
+        </style>
 
-    <canvas></canvas>
-
-    <link rel="stylesheet" href="/style/style.css"> <!-- link do css -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><!-- libraries gsap-->
-    <script src="./style/index.js"></script> <!-- link do java script -->
-
-    <title>tiro.io</title> <!-- Titulo do Site -->
-</head>
-<body>
-
-    <div class="game-board">
-
+<title>Tiro.io</title> <!-- Titulo do Site -->
+<link rel="shortcut icon" href="./img/favicon.ico">
+<div class="fixed text-white text-sm ml-2 mt-1 select-none">
+        <span>
+            Score: 
+        </span>
+        <span id="scoreEl">
+            0
+        </span>
     </div>
 
+    <div class="fixed inset-0 flex items-center justify-center" id="modalEl">
+        <div class="bg-white max-w-md w-full p-6 text-center">
+            <h1 class="text-4xl font-bold leading-none" id="bigScoreEl">0</h1>
+            <p class="text-sm text-gray-700 mb-4">Points</p>
+            <div>
+                <button class="bg-blue-500 text-white w-full py-3 rounded-full text-sm" id="startGameBtm">Start Game</button>
+            </div>
+        </div>
+    </div>
+    <canvas></canvas>
+
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <script src="./style/index.js"></script> <!-- link do java script -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- libraries gsap-->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+</head>
+<body>
+    
 </body>
 </html>
